[gd_scene load_steps=19 format=3 uid="uid://bvvmavom2oouc"]

[ext_resource type="Script" path="res://Scripts/Service/ScemeElementsService/ValveElService.gd" id="1_g7lbp"]
[ext_resource type="Texture2D" uid="uid://hq6qvroofohp" path="res://Icons/Scheme_elements/ValveElConn.png" id="1_ys0eg"]
[ext_resource type="Texture2D" uid="uid://cgqtw81411xsb" path="res://Icons/Scheme_elements/Valve_electric_motor.png" id="2_e2kby"]
[ext_resource type="Texture2D" uid="uid://b4wepm8kd86yj" path="res://Icons/Scheme_elements/Place.png" id="2_pgwgs"]
[ext_resource type="Texture2D" uid="uid://deah34ydfr0gy" path="res://Icons/Scheme_elements/CheckValveOnOff.png" id="3_agbtt"]
[ext_resource type="Texture2D" uid="uid://eqmjcv4ffwdh" path="res://Icons/Scheme_elements/On.png" id="4_lqhgh"]
[ext_resource type="Texture2D" uid="uid://bg74aaxos2asb" path="res://Icons/Scheme_elements/CheckValveOn.png" id="5_pie00"]
[ext_resource type="Texture2D" uid="uid://bkvwte1sq1aik" path="res://Icons/Scheme_elements/Rotate.png" id="6_i1bh3"]
[ext_resource type="Texture2D" uid="uid://3pt8gsoxhvbd" path="res://Icons/Scheme_elements/Flip.png" id="7_d6qqp"]
[ext_resource type="Texture2D" uid="uid://d3edbw1crpv1t" path="res://Icons/Scheme_elements/CheckValveOff.png" id="8_507e8"]
[ext_resource type="Texture2D" uid="uid://coppovd5ul32x" path="res://Icons/Scheme_elements/Off.png" id="9_epej5"]
[ext_resource type="Texture2D" uid="uid://bt2x8xuivmy56" path="res://Icons/Scheme_elements/Motor.png" id="10_j6n3y"]
[ext_resource type="Texture2D" uid="uid://cdxgmfps3kx8q" path="res://Icons/Scheme_elements/ValveEl.png" id="13_fjyie"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0v0cj"]
radius = 89.5231

[sub_resource type="RectangleShape2D" id="RectangleShape2D_st08k"]
size = Vector2(65.1695, 18.1038)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1xtew"]
size = Vector2(17.9594, 65.3834)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oqi7s"]
size = Vector2(65.1695, 18.2895)

[sub_resource type="CircleShape2D" id="CircleShape2D_u6o2o"]
radius = 30.0161

[node name="Valve" type="Node2D"]
script = ExtResource("1_g7lbp")

[node name="menuArea" type="Area2D" parent="."]
visible = false

[node name="menuColShape" type="CollisionShape2D" parent="menuArea"]
rotation = 1.5708
shape = SubResource("CircleShape2D_0v0cj")

[node name="Bg" type="Sprite2D" parent="menuArea/menuColShape"]
rotation = -1.5708
texture = ExtResource("2_pgwgs")

[node name="CheckValveOnOff" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, -2)

[node name="CheckValveOnOff" type="Sprite2D" parent="menuArea/menuColShape/Bg/CheckValveOnOff"]
position = Vector2(-24.9425, -65.7718)
texture = ExtResource("3_agbtt")

[node name="CheckValveOnOff2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/CheckValveOnOff"]
position = Vector2(-24.6223, -66.1363)
shape = SubResource("RectangleShape2D_st08k")

[node name="On" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(-24, 0)

[node name="On2" type="Sprite2D" parent="menuArea/menuColShape/Bg/On"]
position = Vector2(-18.6158, -43.5377)
texture = ExtResource("4_lqhgh")

[node name="On" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/On"]
position = Vector2(-18.6283, -43.5826)
rotation = 1.5708
shape = SubResource("RectangleShape2D_1xtew")

[node name="CheckValveOn" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, -2)

[node name="CheckValveOn" type="Sprite2D" parent="menuArea/menuColShape/Bg/CheckValveOn"]
position = Vector2(-82.2886, -15.4338)
texture = ExtResource("5_pie00")

[node name="CheckValveOn2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/CheckValveOn"]
position = Vector2(-82.6223, -15.1363)
shape = SubResource("RectangleShape2D_st08k")

[node name="Rotate" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, 32)

[node name="Rotate" type="Sprite2D" parent="menuArea/menuColShape/Bg/Rotate"]
position = Vector2(-82.2886, -15.4338)
texture = ExtResource("6_i1bh3")

[node name="Rotate2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/Rotate"]
position = Vector2(-82.6223, -15.3893)
shape = SubResource("RectangleShape2D_st08k")

[node name="Flip" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(40, 59)

[node name="Flip" type="Sprite2D" parent="menuArea/menuColShape/Bg/Flip"]
position = Vector2(-82.2886, -15.4338)
texture = ExtResource("7_d6qqp")

[node name="Flip2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/Flip"]
position = Vector2(-82.6223, -15.3919)
shape = SubResource("RectangleShape2D_st08k")

[node name="CheckValveOff" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, -2)

[node name="CheckValveOff" type="Sprite2D" parent="menuArea/menuColShape/Bg/CheckValveOff"]
position = Vector2(32.3567, 18.8168)
texture = ExtResource("8_507e8")

[node name="CheckValveOff2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/CheckValveOff"]
position = Vector2(32.3777, 18.8637)
shape = SubResource("RectangleShape2D_st08k")

[node name="Off" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, -2)

[node name="Off2" type="Sprite2D" parent="menuArea/menuColShape/Bg/Off"]
position = Vector2(17.2113, 45.7696)
texture = ExtResource("9_epej5")

[node name="Off" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/Off"]
position = Vector2(17.3777, 45.8637)
shape = SubResource("RectangleShape2D_st08k")

[node name="Motor" type="Area2D" parent="menuArea/menuColShape/Bg"]
position = Vector2(25, -27)

[node name="Motor" type="Sprite2D" parent="menuArea/menuColShape/Bg/Motor"]
position = Vector2(32.3567, 18.8168)
texture = ExtResource("10_j6n3y")

[node name="Motor2" type="CollisionShape2D" parent="menuArea/menuColShape/Bg/Motor"]
position = Vector2(32.3777, 18.8637)
shape = SubResource("RectangleShape2D_oqi7s")

[node name="ValveConn" type="Sprite2D" parent="."]
texture = ExtResource("1_ys0eg")

[node name="ValveElectricMotor" type="Sprite2D" parent="."]
texture = ExtResource("2_e2kby")

[node name="ValveLeft" type="Sprite2D" parent="."]
texture = ExtResource("13_fjyie")

[node name="ValveRight" type="Sprite2D" parent="."]
texture = ExtResource("13_fjyie")
flip_h = true

[node name="ActiveArea" type="Area2D" parent="."]

[node name="ActiveArea" type="CollisionShape2D" parent="ActiveArea"]
position = Vector2(0, 2)
shape = SubResource("CircleShape2D_u6o2o")

[connection signal="mouse_exited" from="menuArea" to="." method="_on_menu_area_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/CheckValveOnOff" to="." method="_on_check_valve_on_off_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/CheckValveOnOff" to="." method="_on_check_valve_on_off_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/CheckValveOnOff" to="." method="_on_check_valve_on_off_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/On" to="." method="_on_on_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/On" to="." method="_on_on_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/On" to="." method="_on_on_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/CheckValveOn" to="." method="_on_check_valve_on_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/CheckValveOn" to="." method="_on_check_valve_on_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/CheckValveOn" to="." method="_on_check_valve_on_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/Rotate" to="." method="_on_rotate_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/Rotate" to="." method="_on_rotate_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/Rotate" to="." method="_on_rotate_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/Flip" to="." method="_on_flip_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/Flip" to="." method="_on_flip_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/Flip" to="." method="_on_flip_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/CheckValveOff" to="." method="_on_check_valve_off_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/CheckValveOff" to="." method="_on_check_valve_off_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/CheckValveOff" to="." method="_on_check_valve_off_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/Off" to="." method="_on_off_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/Off" to="." method="_on_off_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/Off" to="." method="_on_off_mouse_exited"]
[connection signal="input_event" from="menuArea/menuColShape/Bg/Motor" to="." method="_on_motor_input_event"]
[connection signal="mouse_entered" from="menuArea/menuColShape/Bg/Motor" to="." method="_on_motor_mouse_entered"]
[connection signal="mouse_exited" from="menuArea/menuColShape/Bg/Motor" to="." method="_on_motor_mouse_exited"]
[connection signal="mouse_entered" from="ActiveArea" to="." method="_on_active_area_mouse_entered"]
